<resources>
    <string name="app_name">FourteenCoffeeApp</string>
    <string name="number_app_name">14 Coffee</string>
    <string name="order">Order</string>
    <string name="history">History</string>
    <string name="address">Address</string>
    <string name="checkout">Checkout</string>
    <string name="add_address">Add Address</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="new_address">New Address</string>
    <string name="input_address_success">Input Address Success!</string>
    <string name="input_address_failed">Address Already Exists!</string>
    <string name="choose_address">Please Choose Address</string>
    <string name="total">Total Price</string>
    <string name="done">Done</string>
    <string name="process">Process</string>
    <string name="receipt">Receipt</string>
    <string name="status">Status</string>
    <string name="order_refresed">Menu Refreshed!</string>
    <string name="cart_empty">Cart Empty!</string>
    <string name="address_empty">Address Empty!</string>
    <string name="coffee_done">Coffee Done!</string>
    <string name="unavailable">Unavailable</string>
    <string name="order_on">Order on</string>
    <string name="coffee_done_detail">Your coffee order is done! We are on the way!</string>
    <string name="not_connected_to_internet">Please connect to the internet first.</string>
    <string name="input_address_empty">Address can\'t be empty!</string>
    <string name="use_current_long_lat">Use current Longitude and Latitude</string>
    <string name="permission_reason">We need this permission to save your longitude and latitude as a new address.</string>
    <string name="cancel">Cancel</string>
</resources>
