<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.HomeFragment">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_app_name"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="127dp"
        android:layout_height="56dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#0A90F1"
        android:text="@string/order"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <Button
        android:id="@+id/history_button"
        android:layout_width="127dp"
        android:layout_height="56dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#0A90F1"
        android:text="@string/history"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_button" />

    <Button
        android:id="@+id/address_button"
        android:layout_width="127dp"
        android:layout_height="56dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#0A90F1"
        android:text="@string/address"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
