<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/add_address_back_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/back"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_address_add_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_address_add_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/add"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_address_back_button" />

    <Button
        android:id="@+id/use_current_long_lat_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_current_long_lat"
        android:textSize="15sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@id/add_address_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/add_address_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/new_address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <View
        android:id="@+id/address_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/use_current_long_lat_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>