<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/checkout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/checkout"
            android:textColor="@android:color/background_dark"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="177dp"
            tools:layout_editor_absoluteY="7dp" />

        <ImageView
            android:id="@+id/checkout_back_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"/>

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/checkout_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/order"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/checkout_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_address"
        app:layout_constraintBottom_toTopOf="@id/checkout_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textColor="@android:color/background_dark"
        android:background="@color/cardBackground"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/checkout_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@id/checkout_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/cardBackground"
        android:textAlignment="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"/>

    <View
        android:id="@+id/checkout_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/checkout_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/checkout_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/checkout_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/checkout_toolbar"
        android:paddingBottom="200dp"
        tools:listitem="@layout/order_item" />



</androidx.constraintlayout.widget.ConstraintLayout>