<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/order_detail_back_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="24dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/order_detail_receipt_button"/>

    <Button
        android:id="@+id/order_detail_receipt_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/receipt"
        android:textSize="24dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/order_detail_back_button"/>

    <TextView
        android:id="@+id/order_detail_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Taman Melati Margonda A1426"
        android:textAlignment="center"
        android:background="@color/cardBackground"
        android:textSize="18dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/order_detail_back_button"/>

    <TextView
        android:id="@+id/order_detail_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textAlignment="center"
        android:background="@color/cardBackground"
        android:textSize="18dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/order_detail_address"/>

    <TextView
        android:id="@+id/order_detail_total_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textAlignment="center"
        android:background="@color/cardBackground"
        android:textSize="18dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/order_detail_status"/>

    <View
        android:id="@+id/order_detail_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/order_detail_total_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/order_detail_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/order_detail_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="230dp"
        tools:listitem="@layout/order_item" />

</androidx.constraintlayout.widget.ConstraintLayout>